# FEUP-ROBO

assignment_2/code/: README.md
assignment_2/code/src/assignment_2/: line_following.cpp  line_following.h
assignment_2/docs/: Andreia_Rodrigues_Tiago_Filipe.docx
assignment_3/code/: CMakeLists.txt  MyRobot.cpp  MyRobot.h  README.md  Utils.cpp  Utils.h  main.cpp  package.xml  startRobotLogic.sh
assignment_3/code/launch/: lf.launch  turtlebot3.launch  world.launch
